# quotes-api-bot

./: Dockerfile  pyproject.toml
app/: __main__.py  api.py  config.py  core.py  handlers.py
