[tool.poetry]
name = "quotes-api-bot"
version = "0.1.0"
description = ""
authors = ["Gabben <43146729+gabbhack@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
envparse = "^0.2.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
